--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "portfolio",
+  "homepage":"http://www.codewithhimanshu.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
