--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
-  "homepage":"http://www.codewithhimanshu.com",
-  "version": "0.1.0",
+  "homepage": "http://www.codewithhimanshu.com",
+  "version": "0.1.1",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
@@ -14,6 +14,7 @@
     "font-awesome": "^4.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
